// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can unzip bgzip-1.txt.gz 1`] = `
Float64Array [
  0,
  22579,
]
`;

exports[`can unzip bgzip-1.txt.gz 2`] = `
Float64Array [
  0,
  4682,
]
`;

exports[`can unzip bgzip-1.txt.gz positive maxv.blockPosition 1`] = `
Float64Array [
  50,
  22579,
  87646,
]
`;

exports[`can unzip bgzip-1.txt.gz positive maxv.blockPosition 2`] = `
Float64Array [
  0,
  4682,
  24403,
]
`;

exports[`can unzip bgzip-1.txt.gz positive minv.dataPosition 1`] = `
Float64Array [
  50,
  22579,
]
`;

exports[`can unzip bgzip-1.txt.gz positive minv.dataPosition 2`] = `
Float64Array [
  0,
  4682,
]
`;
